[project]
name = "cancerdata-cancerdata-pii"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["example", "package", "tutorial"]
authors = [
    { name = "smeisegeier", email = "dexterDSDo@googlemail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering'    
]

dependencies = [
    "build>=1.2.2.post1",
    "hatchling>=1.27.0",
    "pip>=25.1.1",
    "twine>=6.1.0",
]
[project.urls]
Homepage = "https://github.com/smeisegeier/cancerdata-pii"
Repository = "https://github.com/smeisegeier/cancerdata-pii"
"Bug Tracker" = "https://github.com/smeisegeier/cancerdata-pii/issues"

[build-system]
requires = ["hatchling"] # Use hatchling as the build tool
build-backend = "hatchling.build"

# Hatchling automatically discovers packages in 'src' by default.
# No need for a separate [tool.setuptools.packages.find] section.